--- a/PUBLIC/index.html
+++ b/PUBLIC/index.html
@@ -10,8 +10,27 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/comm.css">
+    <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-    <div class="container-fluid"></div>
+    <div class="container-fluid">
+    <!--主页顶部轮播图-->
+        <div id="home_map">
+            <!--主页轮播顶部导航栏-->
+            <header>
+                <div class="">
+                   <a href="#"><img src="img/index/logo1.png"></a> 
+                </div>
+                <ul>
+                   <li><span>目的地</span></li>
+                   <li><span>锦囊</span></li>
+                   <li><span>社区区</span></li>
+                   <li><span>行程助手</span></li>
+                   <li><span>商城</span></li>
+                   <li><span>酒店.民宿</span></li>
+                </ul>
+            </header>
+        </div>
+    </div>
 </body>
 </html>
