--- a/PUBLIC/ami_place.html
+++ b/PUBLIC/ami_place.html
@@ -1,20 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
-    <title>Document</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/comm.css">
-    <link rel="stylesheet" href="css/ami_place.css">
+  <meta charset="UTF-8">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0,minimal-ui:ios">
+  <title>穷游网|出境游目的地旅游攻略_出国旅游目的地指南_旅游景点推荐</title>
+  <link rel="stylesheet" href="css/bootstrap.css">
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/comm.css">
+  <link rel="stylesheet" href="css/ami_place.css">
 </head>
+
 <body>
-    <div class="container-fluid">
-      <div class="my-width"></div>
+  <div class="container-fluid">
+    <!--搜索焦点图-->
+    <div class="banner">
+      <table></table>
+      <h1>你好，世界！</h1>
+      <div class="search">
+        <input type="text" placeholder="搜索国家、城市、目的地">
+        <div class="search-right">
+          <a href="">搜索</a>
+        </div>
+      </div>
     </div>
+  </div>
+  <!--热门城市推荐-->
+  <div class="box">
+  <h1 class="title">热门城市推荐</h1>
+  <div class="box-tab">
+     <ul>
+       <li><span class="in">热门推荐</span></li>
+       <li><span>日韩港澳台</span></li>
+       <li><span>东南亚及亚洲其他</span></li>
+       <li><span>欧洲</span></li>
+       <li><span>大洋洲 北美</span></li>
+       <li><span>非洲 南美</span></li>
+     </ul>
+  </div>
+  </div> 
 </body>
+
 </html>
