修复轮播图

--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -12,26 +12,11 @@
     <script src="js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="css/comm.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/tips_RotaryPlantingMap.css">
     <style>
         .tip {
             background: url(img/tips/FqT8WjBBe6TTRNDm072ITHymvbWW.jpg) 100%;
         }
-
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        /* ul>li>div ul {
-            display: none;
-        }
-
-        ul>li>div>:hover ul {
-            display: block;
-            float: left;
-        } */
-        /* 手风琴导航栏 */
     </style>
 </head>
 
@@ -2474,7 +2459,7 @@
             <main id="main">
                 <div id="banner">
                   <div id="btn-left"></div>
-                  <ul id="ul-imgs" style="width:5000px; margin-left:0px;">
+                  <ul id="ul-imgs" style="width:600%">
                     <li><a href="javascript:;"><img src="img/tips/670_446.jpg"></a></li>
                     <li><a href="javascript:;"><img src="img/tips/670_446(1).jpg"></a></li>
                     <li><a href="javascript:;"><img src="img/tips/670_446(2).jpg"></a></li>
@@ -2496,7 +2481,7 @@
               </main>
         </div>
     </div>
-    <script src="js/comm.js"></script>
+    <script src="js/tips_RotaryPlantingMap.js"></script>
 </body>
 
 </html>
