--- a/PUBLIC/ami_place.html
+++ b/PUBLIC/ami_place.html
@@ -31,90 +31,393 @@
   </div>
   <!--热门城市推荐-->
   <div class="box">
-  <h1 class="title">热门城市推荐</h1>
-  <div class="box-tab">
-     <ul class="tab">
-       <li><span data-id="" >热门推荐</span></li>
-       <li><span>日韩港澳台</span></li>
-       <li><span>东南亚及亚洲其他</span></li>
-       <li><span>欧洲</span></li>
-       <li><span>大洋洲 北美</span></li>
-       <li><span>非洲 南美</span></li>
-     </ul>
-     <span class="tab-line"></span>
-     <ul class="center">
-       <li class="item">
-         <dl>
-           <dt>全球Top 10 城市</dt>
-           <dd>
-             <a href="javascript:;">东京</a>
-             <a href="javascript:;">曼谷</a>
-             <a href="javascript:;">香港</a>
-             <a href="javascript:;">台北</a>
-             <a href="javascript:;">新加坡</a>
-             <a href="javascript:;">巴黎</a>
-             <a href="javascript:;">罗马</a>
-             <a href="javascript:;">伦敦</a>
-             <a href="javascript:;">首尔</a>
-             <a href="javascript:;">洛杉矶</a>
-           </dd>
-         </dl>
-         <dl>
-          <dt>免签及落地签最热旅行地</dt>
-          <dd>
-            <a href="javascript:;">济州岛</a>
-            <a href="javascript:;">印度尼西亚</a>
-            <a href="javascript:;">泰国</a>
-            <a href="javascript:;">塞班岛</a>
-            <a href="javascript:;">摩洛哥</a>
-            <a href="javascript:;">卡塔尔</a>
-            <a href="javascript:;">毛里求斯</a>
-            <a href="javascript:;">柬埔寨</a>
-            <a href="javascript:;">厄瓜多尔</a>
-          </dd>
-        </dl>
-        <dl>
-          <dt>热门海岛</dt>
-          <dd>
-            <a href="javascript:;">塞班岛</a>
-            <a href="javascript:;">长滩岛</a>
-            <a href="javascript:;">马尔代夫</a>
-            <a href="javascript:;">沙巴</a>
-            <a href="javascript:;">普吉岛</a>
-            <a href="javascript:;">巴黎岛</a>
-            <a href="javascript:;">芽庄</a>
-            <a href="javascript:;">帕劳</a>
-            <a href="javascript:;">冲绳市</a>
-          </dd>
-        </dl>
-       </li>
-       <li class="item"></li>
-       <li class="item"></li>
-       <li class="item"></li>
-       <li class="item"></li>
-       <li class="item"></li>
-     </ul>  
+    <h1 class="title">热门城市推荐</h1>
+    <div class="box-tab">
+      <ul class="tab">
+        <li><span data-id="content1">热门推荐</span></li>
+        <li><span data-id="content2">日韩港澳台</span></li>
+        <li><span data-id="content3">东南亚及亚洲其他</span></li>
+        <li><span data-id="content4">欧洲</span></li>
+        <li><span data-id="content5">大洋洲 北美</span></li>
+        <li><span data-id="content6">非洲 南美</span></li>
+      </ul>
+      <span class="tab-line"></span>
+      <ul id="content1" class=" content fade in">
+        <li class="item">
+          <dl>
+            <dt>全球Top 10 城市</dt>
+            <dd>
+              <a href="javascript:;">东京</a>
+              <a href="javascript:;">曼谷</a>
+              <a href="javascript:;">香港</a>
+              <a href="javascript:;">台北</a>
+              <a href="javascript:;">新加坡</a>
+              <a href="javascript:;">巴黎</a>
+              <a href="javascript:;">罗马</a>
+              <a href="javascript:;">伦敦</a>
+              <a href="javascript:;">首尔</a>
+              <a href="javascript:;">洛杉矶</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>免签及落地签最热旅行地</dt>
+            <dd>
+              <a href="javascript:;">济州岛</a>
+              <a href="javascript:;">印度尼西亚</a>
+              <a href="javascript:;">泰国</a>
+              <a href="javascript:;">塞班岛</a>
+              <a href="javascript:;">摩洛哥</a>
+              <a href="javascript:;">卡塔尔</a>
+              <a href="javascript:;">毛里求斯</a>
+              <a href="javascript:;">柬埔寨</a>
+              <a href="javascript:;">厄瓜多尔</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>热门海岛</dt>
+            <dd>
+              <a href="javascript:;">塞班岛</a>
+              <a href="javascript:;">长滩岛</a>
+              <a href="javascript:;">马尔代夫</a>
+              <a href="javascript:;">沙巴</a>
+              <a href="javascript:;">普吉岛</a>
+              <a href="javascript:;">巴黎岛</a>
+              <a href="javascript:;">芽庄</a>
+              <a href="javascript:;">帕劳</a>
+              <a href="javascript:;">冲绳市</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <ul id="content2" class="content fade">
+        <li class="item">
+          <dl>
+            <dt>港澳台</dt>
+            <dd>
+              <a href="javascript:;">香港</a>
+              <a href="javascript:;">澳门</a>
+              <a href="javascript:;">台北</a>
+              <a href="javascript:;">垦丁</a>
+              <a href="javascript:;">花莲</a>
+              <a href="javascript:;">高雄市</a>
+              <a href="javascript:;">台中市</a>
+              <a href="javascript:;">九份</a>
+              <a href="javascript:;">台南</a>
+              <a href="javascript:;">淡水</a>
+              <a href="javascript:;">宜兰</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>日本</dt>
+            <dd>
+              <a href="javascript:;">东京</a>
+              <a href="javascript:;">大阪</a>
+              <a href="javascript:;">京都</a>
+              <a href="javascript:;">冲绳</a>
+              <a href="javascript:;">北海道</a>
+              <a href="javascript:;">名古屋</a>
+              <a href="javascript:;">奈良</a>
+              <a href="javascript:;">札幌</a>
+              <a href="javascript:;">富士山地区</a>
+              <a href="javascript:;">箱根</a>
+              <a href="javascript:;">镰仓</a>
+              <a href="javascript:;">神户</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>韩国</dt>
+            <dd>
+              <a href="javascript:;">首尔</a>
+              <a href="javascript:;">济州岛</a>
+              <a href="javascript:;">釜山</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <ul id="content3" class="content fade">
+        <li class="item">
+          <dl>
+            <dt>泰国</dt>
+            <dd>
+              <a href="javascript:;">曼谷</a>
+              <a href="javascript:;">普吉岛</a>
+              <a href="javascript:;">清迈</a>
+              <a href="javascript:;">苏梅岛</a>
+              <a href="javascript:;">芭提雅</a>
+              <a href="javascript:;">甲米</a>
+              <a href="javascript:;">华欣</a>
+              <a href="javascript:;">皮皮岛</a>
+              <a href="javascript:;">泰国象岛</a>
+              <a href="javascript:;">拜县</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>新加坡</dt>
+            <dd>
+              <a href="javascript:;">新加坡</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>越南</dt>
+            <dd>
+              <a href="javascript:;">芽庄</a>
+              <a href="javascript:;">岘港</a>
+              <a href="javascript:;">胡志明市</a>
+              <a href="javascript:;">河内</a>
+              <a href="javascript:;">美奈</a>
+              <a href="javascript:;">富国岛</a>
+            </dd>
+          </dl>
+        </li>
+        <li class="item">
+          <dl>
+            <dt>马来西亚</dt>
+            <dd>
+              <a href="javascript:;">沙巴</a>
+              <a href="javascript:;">吉隆坡</a>
+              <a href="javascript:;">槟城</a>
+              <a href="javascript:;">亚庇</a>
+              <a href="javascript:;">兰卡威</a>
+              <a href="javascript:;">马六甲</a>
+              <a href="javascript:;">仙本那</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>马来西亚</dt>
+            <dd>
+              <a href="javascript:;">沙巴</a>
+              <a href="javascript:;">吉隆坡</a>
+              <a href="javascript:;">槟城</a>
+              <a href="javascript:;">亚庇</a>
+              <a href="javascript:;">兰卡威</a>
+              <a href="javascript:;">马六甲</a>
+              <a href="javascript:;">仙本那</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>马来西亚</dt>
+            <dd>
+              <a href="javascript:;">沙巴</a>
+              <a href="javascript:;">吉隆坡</a>
+              <a href="javascript:;">槟城</a>
+              <a href="javascript:;">亚庇</a>
+              <a href="javascript:;">兰卡威</a>
+              <a href="javascript:;">马六甲</a>
+              <a href="javascript:;">仙本那</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <ul id="content4" class="content fade">
+        <li class="item">
+          <dl>
+            <dt>意大利</dt>
+            <dd>
+              <a href="javascript:;">罗马</a>
+              <a href="javascript:;">佛罗伦萨</a>
+              <a href="javascript:;">威尼斯</a>
+              <a href="javascript:;">米兰</a>
+              <a href="javascript:;">五渔村</a>
+              <a href="javascript:;">那不勒斯</a>
+              <a href="javascript:;">西西里岛</a>
+              <a href="javascript:;">比萨</a>
+              <a href="javascript:;">维罗纳</a>
+              <a href="javascript:;">锡耶纳</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>英国</dt>
+            <dd>
+              <a href="javascript:;">伦敦</a>
+              <a href="javascript:;">爱丁堡</a>
+              <a href="javascript:;">剑桥</a>
+              <a href="javascript:;">牛津</a>
+              <a href="javascript:;">英国湖区</a>
+              <a href="javascript:;">曼彻斯特</a>
+              <a href="javascript:;">约克</a>
+              <a href="javascript:;">苏格兰</a>
+              <a href="javascript:;">巴斯</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <ul id="content5" class="content fade">
+        <li class="item">
+          <dl>
+            <dt>港澳台</dt>
+            <dd>
+              <a href="javascript:;">香港</a>
+              <a href="javascript:;">澳门</a>
+              <a href="javascript:;">台北</a>
+              <a href="javascript:;">垦丁</a>
+              <a href="javascript:;">花莲</a>
+              <a href="javascript:;">高雄市</a>
+              <a href="javascript:;">台中市</a>
+              <a href="javascript:;">九份</a>
+              <a href="javascript:;">台南</a>
+              <a href="javascript:;">淡水</a>
+              <a href="javascript:;">宜兰</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>日本</dt>
+            <dd>
+              <a href="javascript:;">东京</a>
+              <a href="javascript:;">大阪</a>
+              <a href="javascript:;">京都</a>
+              <a href="javascript:;">冲绳</a>
+              <a href="javascript:;">北海道</a>
+              <a href="javascript:;">名古屋</a>
+              <a href="javascript:;">奈良</a>
+              <a href="javascript:;">札幌</a>
+              <a href="javascript:;">富士山地区</a>
+              <a href="javascript:;">箱根</a>
+              <a href="javascript:;">镰仓</a>
+              <a href="javascript:;">神户</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>韩国</dt>
+            <dd>
+              <a href="javascript:;">首尔</a>
+              <a href="javascript:;">济州岛</a>
+              <a href="javascript:;">釜山</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <ul id="content6" class="content fade">
+        <li class="item">
+          <dl>
+            <dt>全球Top 10 城市</dt>
+            <dd>
+              <a href="javascript:;">东京</a>
+              <a href="javascript:;">曼谷</a>
+              <a href="javascript:;">香港</a>
+              <a href="javascript:;">台北</a>
+              <a href="javascript:;">新加坡</a>
+              <a href="javascript:;">巴黎</a>
+              <a href="javascript:;">罗马</a>
+              <a href="javascript:;">伦敦</a>
+              <a href="javascript:;">首尔</a>
+              <a href="javascript:;">洛杉矶</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>免签及落地签最热旅行地</dt>
+            <dd>
+              <a href="javascript:;">济州岛</a>
+              <a href="javascript:;">印度尼西亚</a>
+              <a href="javascript:;">泰国</a>
+              <a href="javascript:;">塞班岛</a>
+              <a href="javascript:;">摩洛哥</a>
+              <a href="javascript:;">卡塔尔</a>
+              <a href="javascript:;">毛里求斯</a>
+              <a href="javascript:;">柬埔寨</a>
+              <a href="javascript:;">厄瓜多尔</a>
+            </dd>
+          </dl>
+          <dl>
+            <dt>热门海岛</dt>
+            <dd>
+              <a href="javascript:;">塞班岛</a>
+              <a href="javascript:;">长滩岛</a>
+              <a href="javascript:;">马尔代夫</a>
+              <a href="javascript:;">沙巴</a>
+              <a href="javascript:;">普吉岛</a>
+              <a href="javascript:;">巴黎岛</a>
+              <a href="javascript:;">芽庄</a>
+              <a href="javascript:;">帕劳</a>
+              <a href="javascript:;">冲绳市</a>
+            </dd>
+          </dl>
+        </li>
+      </ul>
+      <div class="btn-container">
+        <a href="">查看全部国家</a>
+      </div>
+    </div>
   </div>
-  <div class="btn-container">
-    <a href="">查看全部国家</a>
-  </div>
-  </div> 
+    <!--主题目的地-->
+    <div class="box">
+      <h1 class="title">主题目的地</h1>
+      <div class="box-tab">
+        <ul class="tab">
+          <li><span data-id="content7">俯瞰城市</span></li>
+          <li><span data-id="content8">怀旧时光</span></li>
+          <li><span data-id="content9">魅力夜色</span></li>
+          <li><span data-id="content10">神秘遗址</span></li>
+          <li><span data-id="content11">最爱小镇</span></li>
+        </ul>
+        <span class="tab-line"></span>
+        <div class="card1">
+          <ul id="content7" class="content fade in">
+            <li class="d1"></li>
+            <li class="d2"></li>
+            <li class="d3"></li>
+            <li class="d4"></li>
+            <li class="d5"></li>
+            <li class="d6"></li>
+            <li class="d7"></li>
+          </ul>
+          <ul id="content8" class="content fade">
+            <li class="d1"></li>
+            <li class="d2"></li>
+            <li class="d3"></li>
+            <li class="d4"></li>
+            <li class="d5"></li>
+            <li class="d6"></li>
+            <li class="d7"></li>
+          </ul>
+          <ul id="content9" class="content fade">
+            <li class="d1"></li>
+            <li class="d2"></li>
+            <li class="d3"></li>
+            <li class="d4"></li>
+            <li class="d5"></li>
+            <li class="d6"></li>
+            <li class="d7"></li>
+          </ul>
+          <ul id="content10" class="content fade">
+            <li class="d1"></li>
+            <li class="d2"></li>
+            <li class="d3"></li>
+            <li class="d4"></li>
+            <li class="d5"></li>
+            <li class="d6"></li>
+            <li class="d7"></li>
+          </ul>
+          <ul id="content11" class="content fade">
+            <li class="d1"></li>
+            <li class="d2"></li>
+            <li class="d3"></li>
+            <li class="d4"></li>
+            <li class="d5"></li>
+            <li class="d6"></li>
+            <li class="d7"></li>
+          </ul>
+        </div>
+    </div>
 </body>
 <script>
   //tab-line:初始化状态，获取上面span中宽度和相对有box的位置，让tab-line设置相同属性值
-   var start=$(".tab>li>span:first-child").position().left
-   var wide=$(".tab>li>span:first-child").css("width")
-   $(".tab-line").css({"margin-left":start,"width":wide});
-   //使用冒泡为子元素设置鼠标进入函数
-   $(".tab>li>span").on("mouseenter",function(){
-     var $line=$(".tab-line");
-     var $span=$(this)
-     //1. 当鼠标移动时，设置tab-line的width和margin-left属性值与鼠标悬浮的span一致
-     start=$span.position().left-$(".box").position().left;
-     wide=$span.css("width");
-     //css()函数可以用对象设置多个属性值
-     $line.css({"width":wide,"margin-left":start});
-     //2. 鼠标移动时下面ul跟着变化，
-   })
+  var start = $(".tab>li>span:first-child").position().left
+  var wide = $(".tab>li>span:first-child").css("width")
+  $(".tab-line").css({ "margin-left": start, "width": wide });
+  //使用冒泡为子元素设置鼠标进入函数
+  $(".tab>li>span").on("mouseenter", function () {
+    var $line = $(".tab-line");
+    var $span = $(this);
+    //1. 当鼠标移动时，设置tab-line的width和margin-left属性值与鼠标悬浮的span一致
+    start = $span.position().left - $(".box").position().left;
+    wide = $span.css("width");
+    //css()函数可以用对象设置多个属性值
+    $line.css({ "width": wide, "margin-left": start });
+    //2. 鼠标移动时下面ul跟着变化，
+    var id = $span.attr("data-id");
+    $("#" + id).toggleClass("in").siblings(".content").removeClass("in");
+
+  })
 </script>
+
 </html>
