--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -37,14 +37,19 @@
         .w-5 {
             width: 5%;
         }
-        .yy>div{
+
+        .yy>div {
             border-bottom: 1px solid #ddd;
+        }
+
+        .my_size {
+            font-size: 15px;
         }
     </style>
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-fluid">
         <div class="my-width">
             <p class="mb-0">穷游锦囊</p>
             <div class="tip py-4 px-2 my-2">
@@ -2406,10 +2411,13 @@
                             </li>
                         </ul>
                     </div>
-                    <div class="text-center row">
+                    <div class="text-center row px-0">
                         <p class="col-12"><a><img src="img/tips/FvkohTFHHz_cr-sle2eyNn3RmEJX.jpg" alt=""
                                     class="img-thumbnail w-25 px-6 border-0"></a><a href="">穷游锦囊APP</a></p>
-                        <img src="img/tips/FkbJZOgshrBmgw4UIQOkS_Yy1qnk.jpg" alt="" class="w-100 col-12">
+                        <div class="col-12">
+                            <img src="img/tips/FkbJZOgshrBmgw4UIQOkS_Yy1qnk.jpg" alt="" class="w-100">
+                        </div>
+
                     </div>
                 </div>
                 <!-- 轮播图 -->
@@ -2830,6 +2838,9 @@
                         </div>
                     </div>
                 </div>
+            </div>
+            <div class="text-center my_size">
+                穷游锦囊是穷游网推出的原创旅游指南，致力于为旅行者提供实用的自助游攻略，包括美食购物、交通住宿、路线推荐、自驾路书、当地特色体验等，是出境游必不可少的旅游攻略。
             </div>
         </div>
     </div>
