--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -45,6 +45,9 @@
         .my_size {
             font-size: 15px;
         }
+        .carousel-indicators{
+            top:90%
+        }
     </style>
 </head>
 
