--- a/PUBLIC/tips.html
+++ b/PUBLIC/tips.html
@@ -45,8 +45,13 @@
         .my_size {
             font-size: 15px;
         }
-        .carousel-indicators{
-            top:90%
+
+        .carousel-indicators {
+            top: 90%
+        }
+        .pagination>.active>.page-link{
+            background: #060;
+            color: #fff !important;
         }
     </style>
 </head>
@@ -2462,34 +2467,34 @@
             <p class="mb-0">编辑推荐</p>
             <div class="row">
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(13).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(13).jpg" alt="">
                     <a href="#">威尔士</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(19).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(19).jpg" alt="">
                     <a href="#">波黑</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(2).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(2).jpg" alt="">
                     <a href="#">洛杉矶</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(3).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(3).jpg" alt="">
                     <a href="#">克罗地亚</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(4).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(4).jpg" alt="">
                     <a href="#">四国</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
                 <div class="col-2 bg-light py-2 bk">
-                    <img class=" mb-2 w-100 rounded img-thumbnail" src="img/tips/260_390(5).jpg" alt="">
+                    <img class=" mb-2 w-100 rounded border-0 text-dark font-weight-bold img-thumbnail" src="img/tips/260_390(5).jpg" alt="">
                     <a href="#">濑户内海</a><br>
-                    <button class="mt-2 w-100 rounded border-0 bg-primary text-white py-2">下载阅读</button>
+                    <button class="mt-2 w-100 rounded border-0 text-dark font-weight-bold border-0 bg-primary text-white py-2">下载阅读</button>
                 </div>
             </div>
             <div class="row my-2 bg-light">
@@ -2522,7 +2527,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/turin/" target="_blank">
                                     <img alt="都灵" title="都灵" src="img/tips/260_390(6).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/turin/" title="都灵" target="_blank">
                                 </a>
@@ -2539,7 +2544,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/bavarian-towns/" target="_blank">
                                     <img alt="巴伐利亚小镇" title="巴伐利亚小镇" src="img/tips/260_390(7).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/bavarian-towns/" title="巴伐利亚小镇" target="_blank"></a>
                             </div>
@@ -2556,7 +2561,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/salzburg/" target="_blank">
                                     <img alt="萨尔茨堡" title="萨尔茨堡" src="img/tips/260_390(8).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/salzburg/" title="萨尔茨堡" target="_blank"></a>
                             </div>
@@ -2572,7 +2577,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/oslo/" target="_blank">
                                     <img alt="奥斯陆" title="奥斯陆" src="img/tips/260_390(9).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/oslo/" title="奥斯陆" target="_blank"></a>
                             </div>
@@ -2588,7 +2593,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/london/" target="_blank">
                                     <img alt="伦敦" title="伦敦" src="img/tips/260_390(10).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/london/" title="伦敦" target="_blank"></a>
                             </div>
@@ -2604,7 +2609,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/around-london/" target="_blank">
                                     <img alt="伦敦周边" title="伦敦周边" src="img/tips/260_390(11).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/around-london/" title="伦敦周边" target="_blank"></a>
                             </div>
@@ -2620,7 +2625,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/northern-ireland/" target="_blank">
                                     <img alt="北爱尔兰" title="北爱尔兰" src="img/tips/260_390(12).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/northern-ireland/" title="北爱尔兰" target="_blank"></a>
                             </div>
@@ -2636,7 +2641,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/lake-district/" target="_blank">
                                     <img alt="英国湖区" title="英国湖区" src="img/tips/260_390(13).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/lake-district/" title="英国湖区" target="_blank"></a>
                             </div>
@@ -2649,7 +2654,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/paris/" target="_blank">
                                     <img alt="巴黎" title="巴黎" src="img/tips/260_390(14).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/paris/" title="巴黎" target="_blank"></a>
                             </div>
@@ -2665,7 +2670,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/bangkok/" target="_blank">
                                     <img alt=" 曼谷" title="曼谷" src="img/tips/260_390(15).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/bangkok/" title="曼谷" target=" _blank"></a>
                             </div>
@@ -2681,7 +2686,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/kathmandu/" target="_blank">
                                     <img alt=" 加德满都" title="加德满都" src="img/tips/260_390(16).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/kathmandu/" title="加德满都" target=" _blank"></a>
                             </div>
@@ -2697,7 +2702,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/route-66/" target="_blank">
                                     <img alt="美国66号公路" title="美国66号公路" src="img/tips/260_390(17).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/route-66/" title="美国66号公路" target=" _blank"></a>
                             </div>
@@ -2713,7 +2718,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/las-vegas/" target="_blank">
                                     <img alt="拉斯维加斯" title="拉斯维加斯" src="img/tips/260_390(18).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/las-vegas/" title="拉斯维加斯" target=" _blank"></a>
                             </div>
@@ -2725,7 +2730,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/toronto/" target="_blank">
                                     <img alt=" 多伦多" title="多伦多" src="img/tips/260_390(19).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/toronto/" title="多伦多" target=" _blank"></a>
                             </div>
@@ -2741,7 +2746,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/milan/" target="_blank">
                                     <img alt=" 米兰" title="米兰" src="img/tips/260_390(20).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/milan/" title="米兰" target="_blank"></a>
                             </div>
@@ -2757,7 +2762,7 @@
                             <div>
                                 <a href="http://guide.qyer.com/wales/" target="_blank">
                                     <img alt=" 威尔士" title="威尔士" src="img/tips/260_390.jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/wales/" title="威尔士" target="_blank"></a>
                             </div>
@@ -2773,7 +2778,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/2019-bangkok/" target="_blank">
                                     <img alt="轻年计划2019·曼谷" title="轻年计划2019·曼谷" src="img/tips/260_390(21).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/2019-bangkok/" title="轻年计划2019·曼谷" target=" _blank"></a>
                             </div>
@@ -2790,7 +2795,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/2019-phuket/" target="_blank">
                                     <img alt="轻年计划2019·普吉岛" title="轻年计划2019·普吉岛" src="img/tips/260_390(22).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/2019-phuket/" title="轻年计划2019·普吉岛" target=" _blank"></a>
                             </div>
@@ -2807,7 +2812,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/2019-perth/" target="_blank">
                                     <img alt="轻年计划2019·珀斯" title="轻年计划2019·珀斯" src="img/tips/260_390(23).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/2019-perth/" title="轻年计划2019·珀斯" target=" _blank">
                                 </a>
@@ -2825,7 +2830,7 @@
                             <div>
                                 <a href=" http://guide.qyer.com/2019-singapore/" target="_blank">
                                     <img alt="轻年计划2019·新加坡" title="轻年计划2019·新加坡" src="img/tips/260_390(24).jpg"
-                                        class="w-100 img-thumbnail rounded">
+                                        class="w-100 img-thumbnail rounded border-0 text-dark font-weight-bold">
                                 </a>
                                 <a href="http://guide.qyer.com/2019-singapore/" title="轻年计划2019·新加坡"
                                     target=" _blank"></a>
@@ -2839,6 +2844,20 @@
                                 2019-08-02更新
                             </p>
                         </div>
+                        <ul class="pagination offset-3">
+                            <li class="page-item disabled"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">上一页</a></li>
+                            <li class="page-item active"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">1</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">2</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">3</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">4</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">5</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">6</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">7</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">8</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">9</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">10</a></li>
+                            <li class="page-item"><a href="" class="page-link rounded border-0 text-dark font-weight-bold mx-1">下一页</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
